# seeing-sound

./: .gitignore  Makefile  README.md  analyze.py  config.yaml  hello_world.py  main.py  pyproject.toml  requirements.txt  seeing-sound.desktop  seeing-sound.spec
seeing-sound/: gui.py
seeing_sound/: audio.py  color.py  color_profiles.py  config.py  gui.py  lifx.py  main.py
