[tool.poetry]
name = "sound2light"
version = "0.1.0"
description = "Real-time audio analyzer and LIFX light controller"
authors = ["Mike Robinson <michael_robinson@live.ca"]
readme = "README.md"
packages = [{include = "sound2light"}]

[tool.poetry.dependencies]
python = "^3.11"
pyaudio = "*"
numpy = "*"
PyYAML = "*"
lifxlan = "*"

[tool.poetry.scripts]
sound2light = "sound2light.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
